feat(api): Add Organisation delete route and updated spec file
