# apps/api/src/controllers/organisations/addOrganisationController.ts
@@ -1,4 +1,4 @@
-import { Request, Response } from "express";
+import { Response } from "express";
 import prisma from "../../utils/prismaClient";
 import { AuthRequest } from "../../types/authRequestInterface";
 import { addOrganisationSchema } from "@crypto-payroll/types";
@@ -7,6 +7,7 @@ import { treeifyError } from "zod";
 export const addOrganisationController = async (req: AuthRequest, res: Response): Promise<any> => {
   const parsedInputs = addOrganisationSchema.safeParse(req.body);
 
+  console.log("Inside Add Org");
   if (!parsedInputs.success) {
     const errors = treeifyError(parsedInputs.error);
     return res.status(400).json({ errors });
@@ -44,7 +45,7 @@ export const addOrganisationController = async (req: AuthRequest, res: Response)
       },
     });
   } catch (error: any) {
-    console.log("Organisation Creation Failed full error:", JSON.stringify(error, null, 2));
+    console.error("Organisation Creation Failed full error:", JSON.stringify(error, null, 2));
 
     if (error.code === "P2002") {
       const target = error.meta?.target?.join(', ');
